finished html and css for tasks, added input task functionality and clear all tasks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="task-input">
         <div class="input-container">
           <i class="uil uil-comment-alt-lines"></i>
-          <input type="text" placeholder="Add a new task">
+          <input type="text" placeholder="Add a new task" class="todo-input">
         </div>
         <div class="task-navbar">
           <p class="selected">All</p>
@@ -30,7 +30,18 @@
         </div> 
       </section>
       <section class="tasks-list">
-        <p class="placeholder-task">You don't have any tasks here. Create one above!</p>
+        <!-- <p class="placeholder-task">You don't have any tasks here. Create one above!</p> -->
+        <div class="task">
+          <div class="task-left">
+            <input type="checkbox">
+             <p>Renew gym membership</p>
+          </div>
+          <div class="task-right">
+            <button>
+              <i class="uil uil-ellipsis-h"></i>
+            </button>
+          </div>
+        </div>
       <section>
     </div>
   </main>
