--- a/index.html
+++ b/index.html
@@ -10,41 +10,43 @@
   <title>Todo App</title>
 </head>
 <body>
-  <main>
-    <div class="container">
-      <section class="task-input">
-        <div class="input-container">
-          <i class="uil uil-comment-alt-lines"></i>
-          <input type="text" placeholder="Add a new task" class="todo-input">
+  <div class="container">
+    <section class="task-input">
+      <div class="input-container">
+        <i class="uil uil-comment-alt-lines"></i>
+        <input type="text" placeholder="Add a new task" class="todo-input">
+      </div>
+      <div class="task-navbar">
+        <p class="selected">All</p>
+        <p class="">Pending</p>
+        <p class="">Completed</p>
+        <button class="settings-button">
+          <i class="uil uil-setting"></i>
+        </button>
+        <button class="clear-all-button">
+          Clear All
+        </button>
+      </div> 
+    </section>
+    <section class="tasks-list">
+      <!-- <p class="placeholder-task">You don't have any tasks here. Create one above!</p> -->
+      <div class="task">
+        <div class="task-left">
+          <input type="checkbox">
+            <p>Testing</p>
         </div>
-        <div class="task-navbar">
-          <p class="selected">All</p>
-          <p class="">Pending</p>
-          <p class="">Completed</p>
-          <button class="settings-button">
-            <i class="uil uil-setting"></i>
+        <div class="task-right">
+          <button>
+            <i class="uil uil-ellipsis-h"></i>
+            <ul class="edit-popup hidden">
+              <li class="edit"><i class="uil uil-pen"></i>Edit</li>
+              <li class="delete"><i class="uil uil-trash"></i>Delete</li>
+            </ul>
           </button>
-          <button class="clear-all-button">
-            Clear All
-          </button>
-        </div> 
-      </section>
-      <section class="tasks-list">
-        <!-- <p class="placeholder-task">You don't have any tasks here. Create one above!</p> -->
-        <div class="task">
-          <div class="task-left">
-            <input type="checkbox">
-             <p>Renew gym membership</p>
-          </div>
-          <div class="task-right">
-            <button>
-              <i class="uil uil-ellipsis-h"></i>
-            </button>
-          </div>
         </div>
-      <section>
-    </div>
-  </main>
+      </div>
+    <section>
+  </div>
 
   <script src="script.js"></script>
 </body>
